Bug 1645794 - Set -moz-appearance:none on textareas, to avoid unreliable sizing when setting/removing background. r=emilio
See Layout bug 1645773 for details of the bug being wallpapered here.

Differential Revision: https://phabricator.services.mozilla.com/D79684

UltraBlame original commit: 90b56445e97a248c241da83d679023f2cc574a33

--- a/dom/html/reftests/autofocus/style.css
+++ b/dom/html/reftests/autofocus/style.css
@@ -1,6 +1,9 @@
 :focus { background-color: green; }
 
 
+textarea { -moz-appearance: none; }
+
+
 
 
 
